フォントサイズの調整

--- a/Web.html
+++ b/Web.html
@@ -58,7 +58,7 @@
     <div class="def">
       <div class="title">星形</div>
       <p>
-        $S$：$\mathrm{R}^n$ の部分集合，$p$：$S$ の点<br />
+        $S$：$\mathbb{R}^n$ の部分集合，$p$：$S$ の点<br />
         $S$ は点 $p$ に関して<b>星形</b>である．<br />
         $\overset{\mathrm{def}}{\iff}$ $\forall x \in S$ に対して，$p$ と $x$
         を結ぶ線分が $S$ に含まれる．
