--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
       }
     </style>
   </head>
-  <div class="c">
-    <main class="main">
-      <a href="./Web.html">1 ユークリッド空間上の滑らかな関数 </a>
-    </main>
-    <aside class="side"></aside>
-  </div>
+  <body>
+    <div class="c">
+      <main class="main">
+        <a href="./Web.html">1 ユークリッド空間上の滑らかな関数 </a>
+      </main>
+      <aside class="side"></aside>
+    </div>
+  </body>
 </html>
