--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <div class="c">
       <main class="main">
         <a href="./Web.html">1 ユークリッド空間上の滑らかな関数 </a>
+        <br />
+        <a href="./counter/counter.html">簡単なカウンターアプリ</a>
       </main>
       <aside class="side"></aside>
     </div>
